--- a/tutorial/html/index.html
+++ b/tutorial/html/index.html
@@ -233,13 +233,13 @@ For detailed technical information and manual pages, please refer to the package
 They are regularly updated and reflect the documentation of the current package version on CRAN.</p>
 <p>The tutorial explains the basic analysis of a data set step by step:</p>
 <ul>
-<li>What is your data and the aim of your analysis?</li>
-<li>How do you select learning algorithms and set them up?</li>
-<li>How to predict given new data?</li>
-<li>How to evaluate models and their predictions?</li>
-<li>How to tune models?</li>
-<li>How to select important features?</li>
-<li>How to conduct a comparison study?</li>
+<li>What is your data and the aim of your analysis? <a href="task/">Tasks</a></li>
+<li>How do you select learning algorithms and set them up? <a href="learner/">Learners</a>, <a href="train/">Train</a></li>
+<li>How to predict given new data? <a href="predict/">Predict</a></li>
+<li>How to evaluate models and their predictions? <a href="performance/">Performance</a>, <a href="resample/">Resampling</a></li>
+<li>How to tune models? <a href="tune/">Tuning</a></li>
+<li>How to select important features? <a href="feature_selection/">Feature Selection</a></li>
+<li>How to conduct a comparison study? <a href="benchmark_experiments/">Benchmark Experiments</a></li>
 </ul>
 <p>We present various simple examples from classification and regression
 during this tutorial to illustrate the main features of the
