--- a/tutorial/html/train/index.html
+++ b/tutorial/html/train/index.html
@@ -256,7 +256,7 @@ mod
 ## Hyperparameters:
 </code></pre>
 
-<p>In the above example, generating a <a href="http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html">Learner</a> is not strictly necessary.
+<p>In the above example, creating a <a href="http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html">Learner</a> explicitly is not strictly necessary.
 Generally, you have to create a <a href="http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html">Learner</a> if you want to change any defaults
 by, e.g., setting hyperparameter values or changing the type of prediction.
 Otherwise, <a href="http://www.rdocumentation.org/packages/mlr/functions/train.html">train</a> and many other functions accept a character string naming the learning
@@ -271,9 +271,9 @@ mod
 ## Hyperparameters:
 </code></pre>
 
-<p>Training a learning method works the same for every type of <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>.
+<p>Training a learner works the same way for every type of <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>.
 Here is a cluster analysis example using the data set <a href="http://www.rdocumentation.org/packages/dataset/functions/mtcars.html">mtcars</a>.
-Since we want to set a hyperparameter value we have to create a <a href="http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html">Learner</a>.</p>
+We create a <a href="http://www.rdocumentation.org/packages/mlr/functions/makeLearner.html">Learner</a> because we want to set one of the hyperparameter values, the number of clusters.</p>
 <pre class="prettyprint well"><code class="r">task = makeClusterTask(data = mtcars)
 lrn = makeLearner(&quot;cluster.SimpleKMeans&quot;, N = 3)
 </code></pre>
@@ -317,13 +317,27 @@ that reflect the relevance of examples in the training process.</p>
 twice as frequent as class malignant.
 If both classes should have equal importance in training the classifier we can weigh the
 examples according to the class frequencies in the data set as shown in the following
-<strong>R</strong> code (see also the section about <a href="&amp;over_and_undersampling.md">imbalanced classification problems</a>).</p>
+<strong>R</strong> code (see also the section about <a href="../over_and_undersampling/">imbalanced classification problems</a>).</p>
 <pre class="prettyprint well"><code class="r">## Calculate the observation weights
 tar = getTaskTargets(bc.task)
-tab = as.numeric(table(tar))
-w = 1/tab[tar]
+</code></pre>
 
-train(&quot;classif.cforest&quot;, task = bc.task, weights = w)
+<pre class="prettyprint well"><code>## Error: object 'bc.task' not found
+</code></pre>
+
+<pre class="prettyprint well"><code class="r">tab = as.numeric(table(tar))
+</code></pre>
+
+<pre class="prettyprint well"><code>## Error: unique() applies only to vectors
+</code></pre>
+
+<pre class="prettyprint well"><code class="r">w = 1/tab[tar]
+</code></pre>
+
+<pre class="prettyprint well"><code>## Error: object 'tab' not found
+</code></pre>
+
+<pre class="prettyprint well"><code class="r">train(&quot;classif.cforest&quot;, task = bc.task, weights = w)
 </code></pre>
 
 <pre class="prettyprint well"><code>## Loading required package: party
@@ -349,10 +363,7 @@ train(&quot;classif.cforest&quot;, task = bc.task, weights = w)
 ## Loading required package: stats4
 </code></pre>
 
-<pre class="prettyprint well"><code>## Model for id = classif.cforest class = classif.cforest
-## Trained on obs: 683
-## Used features: 9
-## Hyperparameters:
+<pre class="prettyprint well"><code>## Error: object 'bc.task' not found
 </code></pre>
 
 <p>As you may recall, it is also possible to pass observation weights when creating the 
@@ -363,7 +374,7 @@ some of the learners you want to use cannot deal with weights or you want to try
 The weights in <a href="http://www.rdocumentation.org/packages/mlr/functions/train.html">train</a> overwrite the weights in <a href="http://www.rdocumentation.org/packages/mlr/functions/Task.html">Task</a>.</p>
 <h2 id="wrapped-models">Wrapped models</h2>
 <p><a href="http://www.rdocumentation.org/packages/mlr/functions/train.html">train</a> returns an object of class <a href="http://www.rdocumentation.org/packages/mlr/functions/WrappedModel.html">WrappedModel</a>, which wraps the
-particular model (i.e., contains the output) of the underlying <strong>R</strong> learning method.
+particular model of the underlying <strong>R</strong> learning method. The wrapped model contains the output as well as the actual model.
 It can subsequently be used to perform a <a href="&amp;predict.WrappedModel">prediction</a> for new observations.</p>
 <p>In order to access the underlying model we can use the function <a href="http://www.rdocumentation.org/packages/mlr/functions/getLearnerModel.html">getLearnerModel</a>.
 In the following example we get an object of class <a href="http://www.rdocumentation.org/packages/stats/functions/lm.html">"lm"</a>.</p>
