--- a/tutorial/html/task/index.html
+++ b/tutorial/html/task/index.html
@@ -490,7 +490,7 @@ str(getTaskData(classif.task))
 </code></pre>
 
 <p>Note the many options <a href="http://www.rdocumentation.org/packages/mlr/functions/getTaskData.html">getTaskData</a> provides to convert the data set into a convenient format.
-This is especially handy when you <a href="&amp;create_learner.md">integrate a learner</a> from another <strong>R</strong>
+This is especially handy when you <a href="../create_learner/">integrate a learner</a> from another <strong>R</strong>
 package into <strong>mlr</strong>.
 In this regard the functions <a href="http://www.rdocumentation.org/packages/mlr/functions/getTaskFormula.html">getTaskFormula</a> and <a href="http://www.rdocumentation.org/packages/mlr/functions/getTaskFormulaAsString.html">getTaskFormulaAsString</a> are also useful.</p>
 <h2 id="modifying-a-learning-task">Modifying a learning task</h2>
@@ -567,12 +567,32 @@ These are used throughout this tutorial in order to get shorter and more readabl
 </thead>
 <tbody>
 <tr>
+<td align="left">agri.task (mlr.agri)</td>
+<td align="left">European Union Agricultural Workforces clustering task</td>
+</tr>
+<tr>
+<td align="left">bc.task (mlr.bc)</td>
+<td align="left">Wisconsin Breast Cancer classification task</td>
+</tr>
+<tr>
 <td align="left">bh.task (mlr.bh)</td>
 <td align="left">Boston Housing regression task</td>
 </tr>
 <tr>
+<td align="left">costIris.task (mlr.costIris)</td>
+<td align="left">Iris cost-sensitive classification task</td>
+</tr>
+<tr>
 <td align="left">iris.task (mlr.iris)</td>
 <td align="left">Iris classification task</td>
+</tr>
+<tr>
+<td align="left">lung.task (mlr.lung)</td>
+<td align="left">NCCTG Lung Cancer survival task</td>
+</tr>
+<tr>
+<td align="left">mtcars.task (mlr.mtcars)</td>
+<td align="left">Motor Trend Car Road Tests clustering task</td>
 </tr>
 <tr>
 <td align="left">sonar.task (mlr.sonar)</td>
